Fix canvas overflow

--- a/style.less
+++ b/style.less
@@ -7,6 +7,7 @@ body {
 #canvas-container {
     width: 100%;
     text-align: center;
+    overflow-x: hidden;
     canvas {
         display: inline;
     }
